# fluid

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json
.github/workflows/: fluid-server-tests.yml
admin-dashboard/: README.md  auth.ts  env.example  middleware.ts  package-lock.json  package.json
admin-dashboard/app/: layout.tsx
admin-dashboard/app/login/: loading.tsx
admin-dashboard/components/dashboard/: TransactionTable.tsx  types.ts
admin-dashboard/components/skeletons/: AdminPageSkeleton.tsx  ChartSkeleton.tsx  (+7 more)
admin-dashboard/docs/: loading-skeletons.md
admin-dashboard/lib/: dashboard-data.ts  transaction-history.ts
admin-dashboard/verification/: loading-skeletons.md
client/: README.md  package-lock.json  package.json  tsconfig.json
client/src/: example.ts  index.ts  lib.ts
docs/: NotificationSettings.test.tsx  NotificationSettings.tsx  database-encryption.md  granular-notification-settings.md  real-time-transaction-feed.md  useNotificationSettings.ts
fluid-server/: Cargo.toml
fluid-server/src/: lib.rs  main.rs  xdr.rs
fluid-server/wasm-demo/: app.js  browser-check.mjs  fixtures.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
server/: .env.example  Cargo.toml  README.md  fluid_signer.node  package-lock.json  package.json
server/benches/: tokio_runtime.rs
server/docs/: security-session-fixation-protection.md
server/prisma/: schema.prisma
server/src/: config.ts  index.ts
server/verification/: session-fixation-protection.md
(+53 files in other folders)
