[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust backend for Fluid (Stellar fee-bump relay)"

[dependencies]
ed25519-dalek = "2.2"
hex = "0.4"
sha2 = "0.10"
stellar-strkey = "0.0.16"
stellar-xdr = { version = "26.0.0", features = ["base64"] }
wasm-bindgen = "0.2.105"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
